# yolov8_deploymethods

./: README.md
yolov8_cpp/examples/rknn_yolov8_01/: README.md
yolov8_cpp/examples/rknn_yolov8_01/src/: CMakeLists.txt  rknn_engine_demo.cpp
yolov8_cpp/examples/rknn_yolov8_01/src/launch/: yolov8_rknn_ros.launch
yolov8_cpp/examples/rknn_yolov8_02/: yolov8_plate.rknn
yolov8_cpp/examples/rknn_yolov8_02/src/: package.xml  rknn_engine_demo.cpp
yolov8_cpp/examples/rknn_yolov8_03/: README.md
yolov8_cpp/examples/rknn_yolov8_03/src/: rknn_engine_demo.cpp
yolov8_cpp/examples/rknn_yolov8_03/src/launch/: rknn_engine.launch
yolov8_cpp/examples/rknn_yolov8_04/: yolov8_plate.rknn
yolov8_cpp/examples/rknn_yolov8_04/src/: CMakeLists.txt  rknn_engine_demo.cpp
yolov8_onnx/01/: yolov8_onnx_demo.py
yolov8_onnx/02/: yolov8_onnx_demo.py
yolov8_onnx/03/: yolov8_onnx_demo.py
yolov8_onnx/04/: yolov8_onnx_demo.py
yolov8_rknn/01/: onnx2rknn.py
yolov8_rknn/02/: onnx2rknn.py  yolov8_plate.rknn
yolov8_rknn/03/: images_list.txt  onnx2rknn.py
yolov8_rknn/04/: onnx2rknn.py
